--- a/Eashire/modules/calendar/views/coffeeBreakCreationPage.handlebars
+++ b/Eashire/modules/calendar/views/coffeeBreakCreationPage.handlebars
@@ -34,22 +34,22 @@
     </div>
     <div class="flex flex-row place-content-center items-center mt-4">
       <div class="grow flex flex-col justify-center px-4">
-        <label for="event-date" class="block mb-2 text-sm font-medium text-white">Sélectionner une date</label>
+        <label for="event-date" class="block mb-2 text-sm font-medium text-black dark:text-white">Sélectionner une date</label>
         <div class="relative">
           <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
             <svg aria-hidden="true" class="w-5 h-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path></svg>
           </div>
-          <input datepicker datepicker-autohide datepicker-format="dd/mm/yyyy" type="text" name="event-date" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5" placeholder="Choisir une date">
+          <input datepicker datepicker-autohide datepicker-format="dd/mm/yyyy" type="text" name="event-date" class="bg-gray-700 border border-gray-600 placeholder-white dark:placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5" placeholder="Choisir une date">
         </div>
       </div>
 
       <div class="grow flex flex-col justify-center px-4">
-        <label for="event-time" class="block mb-2 text-sm font-medium text-white">Sélectionner une heure</label>
+        <label for="event-time" class="block mb-2 text-sm font-medium text-black dark:text-white">Sélectionner une heure</label>
         <input id="event-time" name="event-time" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" type="time">
       </div>
 
       <div class="grow flex flex-col justify-center px-4">
-        <label for="event-duration" class="block mb-2 text-sm font-medium text-white">Sélectionner une durée</label>
+        <label for="event-duration" class="block mb-2 text-sm font-medium text-black dark:text-white">Sélectionner une durée</label>
         <select id="event-duration" name="event-duration" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
           <option selected>Choisir une option</option>
           <option value="event_duration_5">5 minutes</option>
