--- a/Eashire/modules/dashboard/views/employeePage.handlebars
+++ b/Eashire/modules/dashboard/views/employeePage.handlebars
@@ -1,8 +1,8 @@
 <aside class='relative top-6' aria-label='Sidebar'>
-    <div class='overflow-y-auto py-4 px-3 bg-slate-800 rounded'>
+    <div class='overflow-y-auto py-4 px-3 bg-white dark:bg-slate-800 rounded'>
         <ul class='space-y-2'>
             <li>
-                <a href={{organigramme}} class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'>
+                <a href={{organigramme}} class='flex items-center p-2 text-base font-normal text-black dark:text-white rounded-lg hover:bg-gray-500 dark:hover:bg-gray-700'>
                     {{>user-group-solid}}
                     <span class='flex-1 ml-3 whitespace-nowrap'>Organigramme</span>
                 </a>
