--- a/Eashire/modules/ficheposte/views/fichePosteList.handlebars
+++ b/Eashire/modules/ficheposte/views/fichePosteList.handlebars
@@ -30,7 +30,7 @@
 		<div class="w-fit mx-auto">
 			{{>PageHeader header_text="Liste des fiches de poste"}}
 			<div class='relative min-w-[30%] m-6 flex flex-col justify-center'>
-				<div class='grow p-4 max-w-3xl m-auto bg-slate-800 rounded-lg border shadow-md sm:p-6'>
+                <div class='grow p-4 max-w-3xl m-auto bg-white rounded-lg border shadow-md sm:p-6 dark:bg-slate-800 dark:border-gray-700 dark:text-slate-300'>
 					{{#if displayValidationIcons}}
 					<div class="mb-6 w-fit m-auto">
 						{{>linkButton5 href='/ficheposte/create' title='Créer une fiche de poste' svg='folder-plus-outline'}}
