--- a/Eashire/modules/organigramme/views/organigramme.handlebars
+++ b/Eashire/modules/organigramme/views/organigramme.handlebars
@@ -1,4 +1,4 @@
-<h1 style='color:aliceblue; text-align: center; font-size: 40px'>Manager</h1>
+<h1 class="text-black dark:text-gray-200 text-center text-4xl">Manager</h1>
 <div class='flex flex-col items-center mt-10'>
 <div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800'>
 	<div class='flex flex-col items-center pb-10'>
@@ -10,7 +10,7 @@
 		<span class='text-sm text-gray-800'>{{manager.businessPhones}}</span>
 	</div>
 </div>
-<h1 style='color:aliceblue; text-align: center; font-size: 40px'>Equipe</h1>
+<h1 class="text-black dark:text-gray-200 text-center text-4xl">Equipe</h1>
 <div class='w-full flex justify-center items-center'> 
 {{#each coworker}}
 <div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
@@ -25,7 +25,7 @@
 </div>
 {{/each}}	
 </div>
-<h1 style='color:aliceblue; text-align: center; font-size: 40px'>Subordonnés</h1>
+<h1 class="text-black dark:text-gray-200 text-center text-4xl">Subordonnés</h1>
 <div class='w-full flex flex-row'>
 {{#each directReports}}
 <div class='w-1/3 bg-white rounded-lg border border-gray-700 shadow-md bg-gray-800 mt-5'>
