--- a/Eashire/views/layouts/mainCalendarWithSidebar.handlebars
+++ b/Eashire/views/layouts/mainCalendarWithSidebar.handlebars
@@ -1,7 +1,7 @@
 <html class="dark">
 	<head>
 		<meta charset='utf-8' />
-		<title>Eashire----</title>
+		<title>Eashire</title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel="icon" href="/images/logo_eashire.png">
 		<link rel='stylesheet' href='/stylesheets/general_style.css' />
