--- a/Eashire/modules/dashboard/views/components/DashboardUserItem.handlebars
+++ b/Eashire/modules/dashboard/views/components/DashboardUserItem.handlebars
@@ -6,14 +6,14 @@
     </a>
     <div class="flex flex-col gap-2">
         <p class="relative md:text-sm md:font-bold text-sky-950 dark:text-cyan-100 whitespace-pre-line text-center"></p>
-        <p class="relative md:text-xl md:font-bold text-sky-950 dark:text-cyan-100 whitespace-pre-line text-center">Bonjour, {{user.displayName}}</p>
+        <p class="relative md:text-xl md:font-bold text-cyan-100 dark:text-cyan-100 whitespace-pre-line text-center">Bonjour, {{user.displayName}}</p>
     </div>
     <div class="flex flex-col gap-2">
         <p class="relative md:text-sm md:font-bold text-sky-950 dark:text-cyan-100 whitespace-pre-line text-center">Votre poste actuel :</p>
-        <p class="relative md:text-xl md:font-bold text-sky-800 dark:text-cyan-50 whitespace-pre-line text-center">{{userInfos.jobTitle}}</p>
+        <p class="relative md:text-xl md:font-bold text-cyan-100 dark:text-cyan-50 whitespace-pre-line text-center">{{userInfos.jobTitle}}</p>
     </div>
     <div class="flex flex-col gap-2">
         <p class="relative md:text-sm md:font-bold text-sky-950 dark:text-cyan-100 whitespace-pre-line text-center">Vous êtes chez nous depuis :</p>
-        <p class="relative md:text-xl md:font-bold text-sky-800 dark:text-cyan-50 whitespace-pre-line text-center">{{userInfos.employeeHireDate}}</p>
+        <p class="relative md:text-xl md:font-bold text-cyan-100 dark:text-cyan-50 whitespace-pre-line text-center">{{userInfos.employeeHireDate}}</p>
     </div>
 </div>
