--- a/Eashire/modules/ficheposte/views/components/listFilterItems/archivedFilter.handlebars
+++ b/Eashire/modules/ficheposte/views/components/listFilterItems/archivedFilter.handlebars
@@ -1,5 +1,5 @@
-<label for="archived_filter" class="block mb-2 text-sm font-medium text-white">Archivage</label>
-<select id="archived_filter" name="archived_filter" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mb-6">
+<label for="archived_filter" class="block mb-2 text-sm font-medium text-black dark:text-white">Archivage</label>
+<select id="archived_filter" name="archived_filter" class="dark:bg-gray-700 border border-gray-600 placeholder-gray-400 text-black dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mb-6">
   <option value="archived_no" selected>Non archivées (actives)</option>
   <option value="archived_yes">Archivées (non-actives)</option>
 </select>
