--- a/Eashire/modules/ficheposte/views/components/listFilterItems/monthFilter.handlebars
+++ b/Eashire/modules/ficheposte/views/components/listFilterItems/monthFilter.handlebars
@@ -1,6 +1,6 @@
 <div class="flex flex-col w-fit">
-  <label for="month_filter" class="block mb-2 text-sm font-medium text-white m-auto">Mois</label>
-  <select id="month_filter" name="month_filter" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1">
+  <label for="month_filter" class="block mb-2 text-sm font-medium text-black dark:text-white m-auto">Mois</label>
+  <select id="month_filter" name="month_filter" class="dark:bg-gray-700 border border-gray-600 placeholder-black dark:placeholder-gray-400 text-black dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1">
     <option selected>-</option>
     <option value="month_0">Janvier</option>
     <option value="month_1">Février</option>
