--- a/Eashire/modules/ficheposte/views/components/listFilterItems/urgencyFilter.handlebars
+++ b/Eashire/modules/ficheposte/views/components/listFilterItems/urgencyFilter.handlebars
@@ -1,5 +1,5 @@
-<label for="urgency_filter" class="block mb-2 text-sm font-medium text-white">Sélectionner une urgence</label>
-<select id="urgency_filter" name="urgency_filter" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mb-6">
+<label for="urgency_filter" class="block mb-2 text-sm font-medium dark:text-white">Sélectionner une urgence</label>
+<select id="urgency_filter" name="urgency_filter" class="dark:bg-gray-700 border border-gray-600 placeholder-black dark:placeholder-gray-400 text-black dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mb-6">
   <option selected>Aucun</option>
   <option value="NON_URGENT">Non urgent</option>
   <option value="PEU_URGENT">Peu urgent</option>
