--- a/Eashire/modules/ficheposte/views/components/listFilterItems/yearFilter.handlebars
+++ b/Eashire/modules/ficheposte/views/components/listFilterItems/yearFilter.handlebars
@@ -1,6 +1,6 @@
 <div class="flex flex-col w-fit">
-  <label for="year_filter" class="block mb-2 text-sm font-medium text-white m-auto">Année</label>
-  <select id="year_filter" name="year_filter" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1">
+  <label for="year_filter" class="block mb-2 text-sm font-medium text-black dark:text-white m-auto">Année</label>
+  <select id="year_filter" name="year_filter" class="dark:bg-gray-700 border border-gray-600 placeholder-black dark:placeholder-gray-400 text-black dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1">
     <option selected>-</option>
   </select>
 </div>
