--- a/Eashire/modules/ressources/views/listfile.handlebars
+++ b/Eashire/modules/ressources/views/listfile.handlebars
@@ -4,7 +4,7 @@
 	</div>
 	<div class='relative m-auto top-6 flex justify-center'>
 		<div
-			class='grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6 flex flex-col items-center'
+			class='grow p-4 max-w-3xl bg-slate-300 dark:bg-slate-800 rounded-lg border shadow-md sm:p-6 flex flex-col items-center'
 		>
 			<div class="mb-6">
 				{{>linkButton5 href='/uploadFile' title='Ajouter une ressource' svg='folder-plus-solid'}}
