--- a/Eashire/views/components/calendarSidebar.handlebars
+++ b/Eashire/views/components/calendarSidebar.handlebars
@@ -1,9 +1,9 @@
-<div id="sidebar" class="flex-none flex flex-col h-full relative truncate w-14 h-full bg-slate-800 transition-all duration-300 overflow-hidden">
+<div id="sidebar" class="flex-none flex flex-col h-full relative truncate w-14 h-full bg-slate-500 dark:bg-slate-800 transition-all duration-300 overflow-hidden">
   <button id="toggle-button" class="p-4 duration-300 w-14">
     {{>chevron-right-outline}}
   </button>
   <ul class='space-y-2 mx-2'>
-    {{>WorkspaceItem href="/calendar" text='Calendrier --- 1' notif_number=(lookup . 'notifNumber') svg='calendar-day-solid'}}
+    {{>WorkspaceItem href="/calendar" text='Calendrier' notif_number=(lookup . 'notifNumber') svg='calendar-day-solid'}}
 
     {{>WorkspaceItem href="/calendar/myevents" text='Mes évènements' notif_number=(lookup . 'notifNumber') svg='user-solid'}}
 
