--- a/Eashire/modules/candidature/views/components/listFilterItems/ficheposteFilter.handlebars
+++ b/Eashire/modules/candidature/views/components/listFilterItems/ficheposteFilter.handlebars
@@ -1,5 +1,5 @@
-<label for="ficheposte_filter" class="block mb-2 text-sm font-medium text-white">Sélectionner une Fiche de poste</label>
-<select id="ficheposte_filter" name="ficheposte_filter" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mb-6">
+<label for="ficheposte_filter" class="block mb-2 text-sm font-medium text-black dark:text-white">Sélectionner une Fiche de poste</label>
+<select id="ficheposte_filter" name="ficheposte_filter" class=" bg-white dark:bg-gray-700 border border-gray-600 placeholder-gray-400 text-black dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 mb-6">
   <option selected>-</option>
   {{#each ficheposte_list}}
     <option value={{this.value}}>{{this.label}}</option>
