--- a/Eashire/modules/calendar/views/calendar.handlebars
+++ b/Eashire/modules/calendar/views/calendar.handlebars
@@ -51,7 +51,7 @@
           </button>
         </div>
         <div class="w-full flex justify-center items-center">
-          <div class="w-1/2 h-fit sm:h-2/3 bg-slate-300 dark:bg-slate-800 rounded-lg overflow-hidden shadow-lg flex flex-col">
+          <div class="w-1/2 h-fit sm:h-2/3 bg-white dark:bg-slate-800 rounded-lg overflow-hidden shadow-lg flex flex-col">
             <div id="p_element" class="w-full bg-blue-400 px-6 pb-4 pt-6  group-hover:bg-blue-500">
               <p class="text-4xl tracking-tight text-white">
                 {{this.subject}}
