--- a/Eashire/modules/candidature/views/components/CandidatureListUl.handlebars
+++ b/Eashire/modules/candidature/views/components/CandidatureListUl.handlebars
@@ -1,5 +1,5 @@
 <div
-    class='grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6'
+    class='grow p-4 max-w-3xl bg-slate-300 dark:bg-slate-800 rounded-lg border shadow-md sm:p-6'
   >
     <ul class='my-4 space-y-3'>
       {{#each candidature_list}}
