--- a/Eashire/modules/candidature/views/components/listFilterItems/dayCandidatureFilter.handlebars
+++ b/Eashire/modules/candidature/views/components/listFilterItems/dayCandidatureFilter.handlebars
@@ -1,6 +1,6 @@
 <div class="flex flex-col w-fit">
-  <label for="day_candidature_filter" class="block mb-2 text-sm font-medium text-white m-auto">Jour</label>
-  <select id="day_candidature_filter" name="day_candidature_filter" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1">
+  <label for="day_candidature_filter" class="block mb-2 text-sm font-medium text-black dark:text-white m-auto">Jour</label>
+  <select id="day_candidature_filter" name="day_candidature_filter" class="bg-white dark:bg-gray-700 border border-gray-600 placeholder-gray-400 text-black dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1">
     <option selected>-</option>
     <option value="day_candidature_1">1</option>
     <option value="day_candidature_2">2</option>
