--- a/Eashire/modules/employes/views/components/ListUserItem.handlebars
+++ b/Eashire/modules/employes/views/components/ListUserItem.handlebars
@@ -1,5 +1,5 @@
 <div
-  class='p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6 flex gap-6'
+  class='p-4 max-w-3xl bg-slate-300 dark:bg-slate-800 rounded-lg border shadow-md sm:p-6 flex gap-6'
 >
   <div class="m-4 flex flex-col">
       <div>
