--- a/Eashire/modules/ressources/views/components/formInputs/RessourceNameFormInput.handlebars
+++ b/Eashire/modules/ressources/views/components/formInputs/RessourceNameFormInput.handlebars
@@ -3,7 +3,7 @@
     type='text'
     name='titre'
     id='titre'
-    class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer'
+    class='block py-2.5 px-0 w-full text-sm text-black dark:text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer'
     placeholder=' '
     required
   />
