creat fiche de poste

--- a/Eashire/modules/ficheposte/views/components/formInputs/DescriptionFormInput.handlebars
+++ b/Eashire/modules/ficheposte/views/components/formInputs/DescriptionFormInput.handlebars
@@ -1,4 +1,4 @@
 <div class='relative z-0 mb-6 mt-6 w-full group'>
-  <label for="fichePoste_jobDescription" class="block mb-2 text-sm font-medium text-gray-400">Description de l'emploi</label>
-  <textarea id="fichePoste_jobDescription" name="fichePoste_jobDescription" rows="5" cols="33" class="block p-2.5 w-full text-sm text-white bg-gray-700 rounded-lg border border-gray-600 focus:ring-blue-500 focus:border-blue-500 placeholder-gray-400" placeholder="Ecrivez ici la description de l'emploi..." required></textarea>
+  <label for="fichePoste_jobDescription" class="block mb-2 text-sm font-medium text-gray-700 dark:text-gray-400">Description de l'emploi</label>
+  <textarea id="fichePoste_jobDescription" name="fichePoste_jobDescription" rows="5" cols="33" class="block p-2.5 w-full text-sm text-black dark:text-white dark:bg-gray-700 rounded-lg border border-gray-600 focus:ring-blue-500 focus:border-blue-500 placeholder-gray-400" placeholder="Ecrivez ici la description de l'emploi..." required></textarea>
 </div>
