--- a/Eashire/modules/ficheposte/views/components/formInputs/LocationFormInput.handlebars
+++ b/Eashire/modules/ficheposte/views/components/formInputs/LocationFormInput.handlebars
@@ -1,4 +1,4 @@
 <div class='relative z-0 mb-6 mt-6 w-full group'>
-  <label for='fichePoste_localisation' class='peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'>Localisation de l'emploi</label>
-  <input type='text' id='fichePoste_localisation' name='fichePoste_localisation' class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:outline-none focus:ring-0 focus:border-blue-500 peer'/>
+  <label for='fichePoste_localisation' class='peer-focus:font-medium absolute text-sm text-gray-700 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'>Localisation de l'emploi</label>
+  <input type='text' id='fichePoste_localisation' name='fichePoste_localisation' class='block py-2.5 px-0 w-full text-sm text-black dark:text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:outline-none focus:ring-0 focus:border-blue-500 peer'/>
 </div>
