--- a/Eashire/modules/ficheposte/views/fichePoste.handlebars
+++ b/Eashire/modules/ficheposte/views/fichePoste.handlebars
@@ -12,8 +12,8 @@
 	<form action="/ficheposte/create" method="post">
 		<div class='grid md:grid-cols-2 md:gap-6'>
 			<div class='relative z-0 mb-6 mt-6 w-full group'>
-				<label for='fichePoste_label' class='peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'>Intitulé du poste</label>
-				<input type='text' id='fichePoste_label' name='fichePoste_label' class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer' required />
+				<label for='fichePoste_label' class='peer-focus:font-medium absolute text-sm text-gray-700 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'>Intitulé du poste</label>
+				<input type='text' id='fichePoste_label' name='fichePoste_label' class='block py-2.5 px-0 w-full text-sm dark:text-white text-black bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer' required />
 			</div>
 
 			{{>JobTypeFormInput}}
